--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.89.0",
     "bcryptjs": "^3.0.3",
+    "jose": "^6.1.3",
     "next": "^14.2.0",
     "react": "^18.3.0",
     "react-dom": "^18.3.0"
